force-app/main/default/objects/EI_SA_Char__c/EI_SA_Char__c.object-meta.xml
<CustomObject>
    <description>SA level characteristics data, such as medical allotment, CARE and FERA Yes and No dates.</description>
    <label>EI SA Char</label>
    <nameField>
        <displayFormat>SACHAR{0000000000}</displayFormat>
        <label>Sequence No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EI SA Char</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>