force-app/main/default/objects/EI_SA_Char__c/fields/ADHOC_CHAR_VAL__c.field-meta.xml
<CustomField>
    <fullName>ADHOC_CHAR_VAL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADHOC CHAR VAL</label>
    <length>254</length>
    <type>Text</type>
</CustomField>