force-app/main/default/objects/EI_SA_Char__c/fields/CHAR_TYPE_CD__c.field-meta.xml
<CustomField>
    <fullName>CHAR_TYPE_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CHAR TYPE CD</label>
    <length>8</length>
    <type>Text</type>
</CustomField>