force-app/main/default/objects/EI_SA_Char__c/fields/CHAR_VAL__c.field-meta.xml
<CustomField>
    <fullName>CHAR_VAL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CHAR VAL</label>
    <length>16</length>
    <type>Text</type>
</CustomField>