force-app/main/default/objects/EI_SA_Char__c/fields/FK1__c.field-meta.xml
<CustomField>
    <fullName>FK1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FK1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>