force-app/main/default/objects/EI_SA_Char__c/fields/SA_ID__c.field-meta.xml
<CustomField>
    <fullName>SA_ID__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SA ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>