force-app/main/default/objects/EI_SA_Char__c/fields/SERVICE_AGREEMENT__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_AGREEMENT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE AGREEMENT</label>
    <referenceTo>EI_Site__c</referenceTo>
    <relationshipLabel>EI SA Char</relationshipLabel>
    <relationshipName>EI_SA_Char</relationshipName>
    <type>Lookup</type>
</CustomField>