force-app/main/default/objects/EI_SA_Char__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SA_ID__c</columns>
    <columns>CHAR_TYPE_CD__c</columns>
    <columns>EFFDT__c</columns>
    <columns>CHAR_VAL__c</columns>
    <columns>ADHOC_CHAR_VAL__c</columns>
    <columns>EXTERNAL_ID__c</columns>
    <columns>SERVICE_AGREEMENT__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CHAR_TYPE_CD__c</field>
        <operation>equals</operation>
        <value>CARE-USG</value>
    </filters>
    <label>All</label>
</ListView>